[FSAR-285 & FSAR-249] Fixing layout and spacing

--- a/src/layout/contentLayout/contentLayout.scss
+++ b/src/layout/contentLayout/contentLayout.scss
@@ -77,17 +77,14 @@
     @media screen and (min-width: $fsa-xl) {
       @include grid-cols(7);
     }
-
-    &--centered {
-      @media screen and (min-width: $fsa-lg) {
-        margin: 0 auto;
-
-        @include grid-cols(8);
-      }
-
-      @media screen and (min-width: $fsa-xl) {
-        @include grid-cols(7);
-      }
+  }
+  &__centered {
+    @media screen and (min-width: $fsa-lg) {
+      margin: 0 auto;
+      @include grid-cols(8);
+    }
+    @media screen and (min-width: $fsa-xl) {
+      padding: 0 2rem;
     }
   }
 }
